cluster/headlamp/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-route
  namespace: headlamp
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.nathanv.app`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    certResolver: le
    domains:
      - sans:
          - "*.nathanv.app"
